objects/ASI_TnE_Employee_Code_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TnE_Department_Code__c</fullName>
        <label>Department Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Employee_Code__c</fullName>
        <label>Employee Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Employee_Code_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Singapore DP</fullName>
                </value>
                <value>
                    <fullName>Singapore DF</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>East Malaysia</fullName>
                </value>
                <value>
                    <fullName>Malacca</fullName>
                </value>
                <value>
                    <fullName>Ipoh</fullName>
                </value>
                <value>
                    <fullName>Chivas Brother</fullName>
                </value>
                <value>
                    <fullName>Irish Distriller</fullName>
                </value>
                <value>
                    <fullName>Ricard SA.</fullName>
                </value>
                <value>
                    <fullName>Philippines DF</fullName>
                </value>
                <value>
                    <fullName>Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Langkawi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ASI TnE Employee Code Mapping</label>
    <listViews>
        <fullName>ASI_TnE_ID_All_Employee_Code_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Department_Code__c</columns>
        <columns>ASI_TnE_Employee_Code__c</columns>
        <columns>ASI_TnE_Market__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Employee_Code_Mapping__c.ASI_TnE_ID_Employee_Code_Mapping</value>
        </filters>
        <label>All ID Employee Code Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_ID_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_MY_All_Employee_Code_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Department_Code__c</columns>
        <columns>ASI_TnE_Employee_Code__c</columns>
        <columns>ASI_TnE_Market__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Employee_Code_Mapping__c.ASI_TnE_MY_Employee_Code_Mapping</value>
        </filters>
        <label>All MY Employee Code Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_MY_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_PH_All_Employee_Code_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Department_Code__c</columns>
        <columns>ASI_TnE_Employee_Code__c</columns>
        <columns>ASI_TnE_Market__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Employee_Code_Mapping__c.ASI_TnE_PH_Employee_Code_Mapping</value>
        </filters>
        <label>All PH Employee Code Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_PH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_SG_All_Employee_Code_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Department_Code__c</columns>
        <columns>ASI_TnE_Employee_Code__c</columns>
        <columns>ASI_TnE_Market__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Employee_Code_Mapping__c.ASI_TnE_SG_Employee_Code_Mapping</value>
        </filters>
        <label>All SG Employee Code Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TH_All_Employee_Code_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Department_Code__c</columns>
        <columns>ASI_TnE_Employee_Code__c</columns>
        <columns>ASI_TnE_Market__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TnE_Employee_Code_Mapping__c.ASI_TnE_TH_Employee_Code_Mapping</value>
        </filters>
        <label>All TH Employee Code Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_TnE_Department_Code__c</columns>
        <columns>ASI_TnE_Employee_Name__c</columns>
        <columns>ASI_TnE_Employee_Code__c</columns>
        <columns>ASI_TnE_Market__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EAC-{000000}</displayFormat>
        <label>Employee Code Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI TnE Employee Code Mapping</pluralLabel>
    <recordTypes>
        <fullName>ASI_TnE_ID_Employee_Code_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE ID Employee Code Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KH_Employee_Code_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE KH Employee Code Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_MY_Employee_Code_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE MY Employee Code Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_PH_Employee_Code_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE PH Employee Code Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_SG_Employee_Code_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE SG Employee Code Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TH_Employee_Code_Mapping</fullName>
        <active>true</active>
        <label>ASI TnE TH Employee Code Mapping</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>